nginx-deployment-invalid.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nginx
  labels:
    name: nginx
    purpose: production
    dataprotection: none # not an approved policy!!
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
  labels:
    app: nginx
    purpose: production
    dataprotection: none # not an approved policy!!
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
