prod-backup-enforce-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prod-backup-enforce-policy
spec:
  validationFailureAction: enforce
  rules:
  - name: cd-prod-backup-policy
    match:
      resources:
        kinds:
        - Deployment
        - StatefulSet
    validate:
      message: "Production Deployments and StatefulSets must have Data Protection Policies with Immutability Enabled (use labels: dataprotection: k10-<policyname> and immutable: enabled)"
      pattern:
        metadata:
          labels:
            =(purpose): production
            dataprotection: k10-?*
            immutable: enabled
